@@ -1,3 +1,8 @@
+2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* configure:
+	* AspNetEdit.addin.xml: Bump MD version.
+
 2008-10-23  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* AspNetEdit.Integration/MonoDevelopProxy.cs: Track API.
